テストコミット２

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Usi</string>
-    <string name="hello_world">ンモー(*´ω｀*)</string>
+    <string name="hello_world">ンモーンモー(*´ω｀*)</string>
     <string name="menu_settings">Settings</string>
 
 </resources>
